# viamd

./: .clang-format  .gitignore  .gitmodules  .phase6_complete  AMBER14_STABILITY_IMPROVEMENTS.md  BUILDER_INTEGRATION.md  CHANGES_SUMMARY.md  CMakeCache.txt  CMakeLists.txt  CORRELATION_FEATURE.md  FINAL_PHASE6_SUMMARY.md  FINAL_SUMMARY.md  FOLLOW_UP_ISSUE_TEMPLATE.md  FORCE_FIELD_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOCAL_INVESTIGATION_RESULTS.md  OPENMM_INTEGRATION.md  PHASE4_SUMMARY.md  PR_NOTE.md  README.md  TODO.md  TODO.txt  TREXIO_ALLOCATOR_FORENSIC_REPORT.md  TREXIO_CRASH_INVESTIGATION_REPORT.md  TREXIO_GUI_IMPLEMENTATION.md  TREXIO_IMPLEMENTATION_STATUS.md  UI_CHANGES_DOCUMENTATION.md  UI_CHANGES_VISUAL.md  WORK_SUMMARY.md  icon.rc  test_force_field_improvements  test_force_field_improvements.cpp  test_force_field_switch  test_force_field_switch.cpp  test_integration.cpp  todo.md  viamd.desktop  viamd.metainfo.xml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
article/: SI.aux  SI.bbl  SI.blg  SI.tex  achemso.ins  acs-SI.bib  acs-achemso.bib  bibliography.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.tex  pdflatex215616.fls  plan.md
benchmark/: CMakeLists.txt  main.cpp
cmake/: FindTREXIO.cmake
datasets/: water.trexio
docs/: DOCUMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MAINTAINER_GUIDE.md  MDLIB_TREXIO_INTEGRATION.md  PHASE4_STATUS.md  PHASE4_TESTING_REPORT.md  PHASE5_COMPONENT.md  PHASE5_SUMMARY.md  SESSION_SUMMARY.md  TASK_TRACKER.md  TREXIO_ALLOCATOR_FIX.md  TREXIO_AUDIT.md  TREXIO_AUDIT_AND_INTEGRATION_PLAN.md  TREXIO_FIX_CHECKLIST.md  TREXIO_FIX_README.md  TREXIO_GUI.md  TREXIO_IMPLEMENTATION_REFERENCE.md  TREXIO_INTEGRATION.md  TREXIO_KNOWN_ISSUES.md  TREXIO_MO_IMPLEMENTATION.md  TREXIO_PHASE6_SUMMARY.md  TREXIO_PR_CHECKLIST.md  TREXIO_QUICK_REFERENCE.md  TREXIO_QUICK_SUMMARY.md  TREXIO_SUPPORT.md  mdlib_trexio.patch  mdlib_trexio_nobom.patch  mdlib_trexio_original.patch  mdlib_trexio_updated.patch
ext/: CMakeLists.txt
ext/ImGuiColorTextEdit/: CMakeLists.txt  TextEditor.cpp  TextEditor.h
ext/atomic_queue/: CMakeLists.txt
ext/base91/: CMakeLists.txt  Makefile  NEWS  README
ext/base91/src/: base91.c  base91.h  cli.c
ext/gl3w/: CMakeLists.txt
ext/gl3w/GL/: glcorearb.h
ext/imgui/: CMakeLists.txt  imconfig.h  imgui.cpp  imgui_draw.cpp  imgui_user.h  imgui_user.inl  imgui_widgets.cpp
ext/imgui/widgets/: plot_extended.h  plot_extended.inl  range_slider.h  range_slider.inl
ext/imgui_notify/: CMakeLists.txt  imgui_notify.h
ext/implot/: CMakeLists.txt  implot.cpp  implot_internal.h
ext/libxdrfile/src/: xdrfile.c
ext/nativefiledialog/: CMakeLists.txt
ext/nativefiledialog/cmake/: FindGTK3.cmake
ext/nativefiledialog/src/: nfd_win.cpp
ext/noc/: noc_file_dialog.h
ext/ppk_assert/: ppk_assert.cpp
ext/rsk_platform/: CMakeLists.txt
ext/rsk_platform/ext/imgui/: CMakeLists.txt
ext/rsk_platform/ext/imgui/widgets/: range_slider.inl
ext/rsk_platform/ext/nativefiledialog/: CMakeLists.txt
ext/rsk_platform/ext/nativefiledialog/src/: nfd_common.c
ext/rsk_platform/ext/noc/: noc_file_dialog.h
ext/rsk_platform/include/core/: array_types.h  common.h  platform.h  string_types.h  string_utils.h  vector_types.h
ext/rsk_platform/src/: array_types.h  common.h  droid_sans.inl  gl3w.c  noto_sans_regular_font.inl  platform.cpp  platform.h  platform_linux.inl  platform_osx.inl  platform_unix.inl  platform_win32.inl  string_utils.cpp
ext/stb/: CMakeLists.txt
ext/svd3/: LICENSE.md  Makefile  README.md  main_cpu.cpp  svd_math.nb
ext/svd3/svd3_cuda/: Makefile  svd3.cu  svd3_cuda
ext/tinyexpr/: CMakeLists.txt  tinyexpr.c
ext/viamd/: CMakeLists.txt
ext/viamd/ext/gl3w/: CMakeLists.txt
ext/viamd/ext/libxdrfile/src/: xdrfile_trr.c  xdrfile_xtc.c
ext/viamd/ext/svd3/: svd3.h
ext/viamd/ext/svd3/svd3_cuda/: svd3_cuda.pro
ext/viamd/src/core/: camera.h  camera_utils.cpp  camera_utils.h  hash.h  log.cpp  string_types.h
ext/viamd/src/gfx/: postprocessing_utils.cpp  volume_utils.h
ext/viamd/src/mol/: aminoacid.cpp  element.cpp  element.h  filter.h  gro_utils.h  molecule_draw.cpp  molecule_trajectory.cpp  pdb_utils.cpp  pdb_utils.h  ramachandran.cpp  spatial_hash.cpp  stats.cpp
ext/viamdutils/: CMakeLists.txt
ext/viamdutils/ext/glm/: manual.md  readme.md
ext/viamdutils/ext/libxdrfile/: CMakeLists.txt
ext/viamdutils/ext/libxdrfile/src/: xdrfile.c  xdrfile.h  xdrfile_trr.h  xdrfile_xtc.h
ext/viamdutils/ext/svd3/: main_glm.cpp
ext/viamdutils/ext/svd3/svd3_cuda/: main.cpp
ext/viamdutils/src/core/: array_types.h  camera.h  camera_utils.cpp  camera_utils.h  common.h  log.h  math_utils.cpp  math_utils.h  string_utils.cpp  types.h  vector_types.h  volume.h
ext/viamdutils/src/gfx/: gl_utils.cpp  immediate_draw_utils.cpp  immediate_draw_utils.h  molecule_draw.cpp  molecule_draw.h  raytracing_utils.cpp  volume_utils.cpp
ext/viamdutils/src/mol/: aminoacid.h  filter.cpp  gro_utils.cpp  hydrogen_bond.cpp  molecule_dynamic.h  molecule_structure.cpp  molecule_structure.h  molecule_utils.cpp  molecule_utils.h  ramachandran.cpp  stats.cpp  trajectory_utils.cpp  trajectory_utils.h
icon/: viamd.icns
scripts/: README.md  apply_mdlib_trexio_patch.sh  run_trexio_allocator_repro.sh
shaders/: backbone_compute_spline.geom  backbone_compute_spline.vert  backbone_control_points.geom  backbone_control_points.vert  backbone_draw_spline.frag  backbone_draw_spline.geom  backbone_draw_spline.vert  cartoon.frag  cartoon.geom  cartoon.vert  compute_pbc_view_velocity.vert  deferred_shading.frag  highlight.frag  licorice.frag  licorice.geom  licorice.vert  ribbons.frag  ribbons.geom  ribbons.vert  scale_hsv.frag  temporal.frag  vdw.frag  vdw.geom  vdw.vert  vdw_depth_prepass.vert  vdw_ortho.frag  vdw_ortho.vert
src/: MOLDEN_FORMAT_NOTES.md  (+72 more)
tools/mdlib_allocator_reproducer/: ASAN_TEST_RESULTS.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  main.c  repro-output-asan.txt  repro-output.txt
tools/trexio_loader_test/: CMakeLists.txt  test_loader.c
unittests/: CMakeLists.txt  unittests.cpp
(+335 files in other folders)
